Responsive correction
Get rid of horizontal scroll

--- a/src/styles.css
+++ b/src/styles.css
@@ -28,7 +28,6 @@ h3 {
   margin-top: 40px;
   padding: 15px;
   text-shadow: 1px 1px 2px white;
-  box-shadow: 2px 2px 2px pink;
 }
 
 h5 {
@@ -50,7 +49,7 @@ h5 {
 }
 
 .dev-heading {
-  margin: 60px;
+  margin-top: 60px;
 }
 
 .homepage-text,
@@ -117,13 +116,53 @@ h5 {
   text-shadow: 1px 1px 2px white;
 }
 
-.weather-app {
+.apps {
   border: 2px solid white;
   border-radius: 15px;
   box-shadow: 2px 2px 2px gray;
+  width: 330px;
 }
 
 .dev-signature {
   font-size: 12px;
   margin-top: 70px;
 }
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 14px;
+    text-align: center;
+  }
+
+  h2 {
+    font-size: 24px;
+    text-align: center;
+    margin-top: 0;
+  }
+
+  .contact-link {
+    text-align: center;
+    font-size: 30px;
+    letter-spacing: 40px;
+  }
+
+  .dev-home-pic {
+    width: 200px;
+    text-align: left;
+    margin-top: 30px;
+  }
+
+  .homepage-text {
+    text-align: center;
+    font-size: 14px;
+    margin-top: -50px;
+  }
+
+  .dev-signature {
+    font-size: 10px;
+  }
+
+  .apps {
+    width: 300px;
+  }
+} ;
